@@ -104,7 +104,8 @@ public class DialogServiceRcpImpl extends DialogServiceCommonImpl {
 				messages.DialogService_OpenDirectoryAfterExport_ShowDir);
 		if (result == 1) {
 			try {
-				Runtime.getRuntime().exec("explorer " + path.toString()); //$NON-NLS-1$
+				Runtime.getRuntime()
+						.exec(new String[] { "explorer " + path.toString() }); //$NON-NLS-1$
 			} catch (final IOException e) {
 				throw new RuntimeException(e);
 			}
